fix: исправлено openapi для /api/shop
